[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ui/player_ui/resource_bar_manager.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/bars/resource_bar.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/bars/themes/player_energy_bar_theme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/ui/player_ui/action_ui/action_ui_panel/action_ui_panel.tscn" type="PackedScene" id=4]

[node name="PlayerUI" type="CanvasLayer"]

[node name="ResourceBarManager" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="HealthBar" parent="ResourceBarManager" instance=ExtResource( 2 )]
margin_right = 200.0
margin_bottom = 20.0

[node name="EnergyBar" parent="ResourceBarManager" instance=ExtResource( 2 )]
margin_top = 20.0
margin_right = 200.0
margin_bottom = 40.0
theme = ExtResource( 3 )

[node name="ActionUI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="WeaponUIPanel" parent="ActionUI" instance=ExtResource( 4 )]
margin_left = 20.0
margin_top = 92.0
margin_right = 20.0
margin_bottom = 92.0
is_action = false
center_justified = false

[node name="CenterContainer" type="CenterContainer" parent="ActionUI"]

[node name="ActionUIPanel" parent="ActionUI/CenterContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
